--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -2,11 +2,17 @@
 - name: nginx installation 
   hosts: web 
   become: yes 
+  gather_facts: true
   tasks: 
+  - name: print the gather_facts
+    ansible.builtin.debug:
+      var: ansible_facts 
+
   - name: Install nginx web service 
     ansible.builtin.package: 
       name: nginx 
       state: present 
+      
   - name: Start the Nginx service 
     ansible.builtin.service: 
       name: nginx 
