--- a/07-var-files.yaml
+++ b/07-var-files.yaml
@@ -2,7 +2,7 @@
 - name: variables from var files 
   hosts: local 
   connection: local 
-  vars_file:
+  vars_files:
     - vars.yaml 
   tasks: 
   - name: print the varibles file 
