--- a/inventory.ini
+++ b/inventory.ini
@@ -6,5 +6,5 @@ localhost
 
 [local:vars]
 COURSE: "Devops with Aws"
-DURATION: "180HR"
-TRAINER: "Trinath"
+DURATION: "120HR"
+TRAINER: "Trinath Reddy"
