--- a/inventory.ini
+++ b/inventory.ini
@@ -5,6 +5,6 @@
 localhost
 
 [local:vars]
-COURSE: "Devops with Aws"
-DURATION: "120HR"
-TRAINER: "Trinath Reddy"
+COURSE="Devops with Aws"
+DURATION="120HR"
+TRAINER="Trinath Reddy"
