--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,6 @@
 [web]
-10.0.0.245
+10.0.0.245 COURSE="Devops with Aws" DURATION="120HR" TRAINER="Trinath Reddy" ansible_user=ec2-user ansible_password=DevOps321
+localhost COURSE="Ansible" DURATION="100HR" TRAINER="Trinath"     
 
 [local]
 localhost
