--- a/10-inventory-vars.yaml
+++ b/10-inventory-vars.yaml
@@ -6,3 +6,11 @@
   - name: Print the varibles 
     ansible.builtin.debug: 
       msg: "Course is {{ COURSE }}, duration is {{ DURATION }}, trainer is {{ TRAINER }}"
+  
+- name: inventory variables 
+  hosts: local
+  connection: local
+  tasks: 
+  - name: Print the varibles 
+    ansible.builtin.debug: 
+      msg: "Course is {{ COURSE }}, duration is {{ DURATION }}, trainer is {{ TRAINER }}"
