--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,11 @@
 [web]
 10.0.0.245 COURSE="Devops with Aws" DURATION="120HR" TRAINER="Trinath Reddy" ansible_user=ec2-user ansible_password=DevOps321
-localhost COURSE="Ansible" DURATION="100HR" TRAINER="Trinath" ansible_user=ec2-user ansible_password=DevOps321    
+; localhost COURSE="Ansible" DURATION="100HR" TRAINER="Trinath" ansible_user=ec2-user ansible_password=DevOps321    
 
 [local]
 localhost
 
-[local:vars]
-COURSE="Devops with Aws"
-DURATION="120HR"
-TRAINER="Trinath Reddy"
+; [local:vars]
+; COURSE="Devops with Aws"
+; DURATION="120HR"
+; TRAINER="Trinath Reddy"
