--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -9,3 +9,8 @@
     ansible.builtin.debug: 
       msg: given number {{ my_number }} is greater than 15 
     when: my_number > 15 
+
+  - name: print my number is less than or equal to 15 
+    ansible.builtin.debug: 
+      msg: given number {{ my_number }} is less than or equal to 15 
+    when: my_number < 15
