--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -6,3 +6,9 @@
   - name: handels undefined variables 
     ansible.builtin.debug: 
       msg: "Hello {{ person | default('Ramesh') }}"
+
+  - name: convert string to list 
+    vars: 
+      fruits: "apple, banana, orange" #string 
+    ansible.builtin.debug: 
+      msg: "Fruits are: {{ fruits | split(',') }}"
