--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -12,3 +12,12 @@
       fruits: "apple, banana, orange" #string 
     ansible.builtin.debug: 
       msg: "Fruits are: {{ fruits | split(',') }}"
+
+  - name: convert map into list 
+    vars: 
+      course: 
+        name: Ansible 
+        duration: 20HR 
+        trainer: Trinath
+    ansible.builtin.debug: 
+      msg: "course info: {{ course | dict2items }}"
