--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -30,3 +30,9 @@
       - {'key': 'trainer', 'value': 'Trinath'}
     ansible.builtin.debug: 
       msg: "Course info: {{ course | items2dict }}"
+
+  - name: convert upper to lower 
+    vars: 
+      name: Trinath Reddy 
+    ansible.builtin.debug: 
+      msg: "Hello {{ name | lower }}"
