--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -36,3 +36,9 @@
       name: Trinath Reddy 
     ansible.builtin.debug: 
       msg: "Hello {{ name | lower }}"
+
+  - name: convert lower to upper 
+    vars: 
+      name: trinath reddy 
+    ansible.builtin.debug: 
+      msg: "Hello {{ name | upper }}"
