--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -48,3 +48,9 @@
       numbers: [1,41,4,23,54,3] 
     ansible.builtin.debug: 
       msg: "Min is: {{ numbers | min }} Max is: {{ numbers | max }}"
+
+  - name: IP address is valid or not 
+    vars: 
+      ip: 245.325.222.222 
+    ansible.builtin.debug: 
+      msg: "{{ ip | ansible.utils.ipaddr }}"
