shell and command modules

--- a/20-shell-command.yaml
+++ b/20-shell-command.yaml
@@ -8,3 +8,8 @@
   
   - name: execute the ls command in command module without redirecters 
     ansible.builtin.command: ls -ltr 
+    register: command_output 
+  
+  - name: print the output 
+    ansible.builtin.debug: 
+      msg: "{{ command_output }}"
