--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -12,6 +12,14 @@
     - backend 
     - frontend 
   tasks: 
+  - name: install aws python libraries 
+    ansible.builtin.pip: 
+      name: "{{ item }}"
+      executable: pip3.9 
+    loop: 
+    - botocore 
+    - boto3
+
   - name: create ec2 instance 
     amazon.aws.ec2_instance:
       name: "{{ item }}"
