--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -28,3 +28,8 @@
       instance_type: "{{ instance_type }}"
       image_id: "{{ ami_id }}"
     loop: "{{ instances }}"
+    register: ec2_info 
+  
+  - name: print ec2 info 
+    ansible.builtin.debug: 
+      msg: "{{ ec2_info }"
