--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -34,7 +34,7 @@
     ansible.builtin.debug: 
       msg: "{{ ec2_info }}"
     
-  - name: print ec2 private ips 
-    ansible.builtin.debug: 
-      msg: "{{ item.private_ip_address }}"
-    loop: "{{ ec2_info.instances }}" 
+  - name: print ec2 private ips
+    ansible.builtin.debug:
+      msg: "{{ item.instances[0].private_ip_address }}"
+    loop: "{{ ec2_info.results }}"
