--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -34,7 +34,12 @@
     ansible.builtin.debug: 
       msg: "{{ ec2_info }}"
     
-  - name: print ec2 private ips
-    ansible.builtin.debug:
-      msg: "{{ item.instances[0].private_ip_address }}"
-    loop: "{{ ec2_info.results }}"
+  # - name: print ec2 private ips
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.instances[0].private_ip_address }}"
+  #   loop: "{{ ec2_info.results }}"
+  
+  - name: print instance name and private ip
+  ansible.builtin.debug:
+    msg: "{{ item.item }} => {{ item.instances[0].private_ip_address }}"
+  loop: "{{ ec2_info.results }}"
