--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -39,10 +39,10 @@
   #     msg: "{{ item.instances[0].private_ip_address }}"
   #   loop: "{{ ec2_info.results }}"
   
-  - name: print instance name and private ip
-    ansible.builtin.debug:
-      msg: "{{ item.item }} => {{ item.instances[0].private_ip_address }}"
-    loop: "{{ ec2_info.results }}"
+  # - name: print instance name and private ip
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.item }} => {{ item.instances[0].private_ip_address }}"
+  #   loop: "{{ ec2_info.results }}"
 
   - name: Print only private IPs
     ansible.builtin.debug:
