--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -7,6 +7,7 @@
     sg_id: sg-0a3b9d8fc83074f17
     ami_id: ami-09c813fb71547fc4f
     instance_type: t3.micro 
+    zone: tridev.online
     instances: 
     - mysql 
     - backend 
@@ -30,9 +31,9 @@
     loop: "{{ instances }}"
     register: ec2_info 
   
-  - name: print ec2 info 
-    ansible.builtin.debug: 
-      msg: "{{ ec2_info }}"
+  # - name: print ec2 info 
+  #   ansible.builtin.debug: 
+  #     msg: "{{ ec2_info }}"
     
   # - name: print ec2 private ips
   #   ansible.builtin.debug:
@@ -62,3 +63,14 @@
     ansible.builtin.debug:
       var: instance_ip_map
 
+  - name: Create route53 records
+  amazon.aws.route53:
+    state: present
+    zone: "{{ zone }}"
+    record: "{{ item.item }}.{{ zone }}"
+    type: A
+    ttl: 1
+    value: "{{ item.instances[0].private_ip_address }}"
+    wait: true
+    overwrite: true 
+  loop: "{{ ec2_info.results }}"
