--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -64,13 +64,13 @@
       var: instance_ip_map
 
   - name: Create route53 records
-  amazon.aws.route53:
-    state: present
-    zone: "{{ zone }}"
-    record: "{{ item.item }}.{{ zone }}"
-    type: A
-    ttl: 1
-    value: "{{ item.instances[0].private_ip_address }}"
-    wait: true
-    overwrite: true 
-  loop: "{{ ec2_info.results }}"
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"
+      record: "{{ item.item }}.{{ zone }}"
+      ype: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true
+      overwrite: true 
+    loop: "{{ ec2_info.results }}"
