--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -68,7 +68,7 @@
       state: present
       zone: "{{ zone }}"
       record: "{{ item.item }}.{{ zone }}"
-      ype: A
+      type: A
       ttl: 1
       value: "{{ item.instances[0].private_ip_address }}"
       wait: true
