--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -74,3 +74,15 @@
       wait: true
       overwrite: true 
     loop: "{{ ec2_info.results }}"
+
+  - name: create Route53 for frontend Public IP record 
+    amazon.aws.route53: 
+      state: present 
+      zone: "{{ zone }}"
+      record: "{{ item.item }}.{{ zone }}"
+      type: A 
+      value: "{{ item.instances[0].public_ip_address }}"
+      wait: true 
+      overwrite: true 
+    loop: "{{ ec2_info.results }}"
+    when: item.item == "frontend"
